--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.10",
+    "camelcase-keys": "^10.0.1",
     "i18next": "^25.6.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.3.5",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "snakecase-keys": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
