--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.10",
     "camelcase-keys": "^10.0.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
